2009-03-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/LookupPaintScale.java
    (PaintItem): Changed to static.

2009-03-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/xy/AbstractXYItemRenderer.java
    (findRangeBounds): Handle case where plot is null.

2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/xy/YIntervalRenderer.java
    (findRangeBounds): Use new inherited method.

2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/renderer/RendererUtilities.java
    (findLiveItemsLowerBound): Fixed results for unsorted dataset,
    (findLiveItemsUpperBound): Likewise,
    (findLiveItems): Check case where upper index is less than lower.

2009-03-27  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/XYPlot.java
    (domainPannable): Change default to false,
    (rangePannable): Likewise,
    (rendererChanged): If series visibility changes, configure the axes,
    (panDomainAxes): Reconfigure the range axes,
    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (dataBoundsIncludesVisibleSeriesOnly): New field,
    (setSeriesVisible(Boolean, boolean): Modified generated RendererEvent,
    (setSeriesVisible(int, Boolean, boolean): Likewise,
    (setBaseSeriesVisible): Likewise,
    (getDataBoundsIncludesVisibleSeriesOnly): New method,
    (setDataBoundsIncludesVisibleSeriesOnly): Likewise,
    (equals): Updated for new field,
    * source/org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
    (findRangeBounds(CategoryDataset)): Delegate to new method,
    (findRangeBounds(CategoryDataset, boolean)): Handle hidden series,
    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (findDomainBounds(XYDataset)): Delegate to new method,
    (findDomainBounds(XYDataset, boolean)): Handle hidden series,